--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,20 +1,27 @@
-# Logs
-logs
-*.log
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Build
+dist
+dist-ssr
+build
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -22,8 +29,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.local
 
-# Environment variables
-.env
-.env.local
-.env.production
+# Firebase
+.firebase
+*.log
+
+# Testing
+coverage
