--- a/client/.env.example
+++ b/client/.env.example
@@ -6,3 +6,4 @@ VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 VITE_FIREBASE_APP_ID=your_app_id_here
 VITE_GEMINI_API_KEY=your_api_key_here
+VITE_PAYSTACK_PUBLIC_KEY=pk_test_your_public_key_here
